--- a/react-admin/.env.development
+++ b/react-admin/.env.development
@@ -1,14 +1,5 @@
-
 NODE_ENV=development
-
-VITE_BASE_API= /api
-
-# 上传文件接口
-VITE_UPLOAD_API = http://localhost:8080/api/upload
-
-
-# mock开关
-VITE_MOCK_SWITCH = true
-
-# mock 接口
-VITE_MOCK_API = ''
+VITE_BASE_API=/api
+VITE_UPLOAD_API=http://localhost:8080/api/upload
+VITE_MOCK_SWITCH=true
+VITE_MOCK_API=/mock
