--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -14,6 +14,7 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "less": "^4.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
