--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "5.x",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "ahooks": "^3.9.5",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "echarts": "^6.0.0",
